--- a/Site do jogo/personagem.html
+++ b/Site do jogo/personagem.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="html" lang="pt">
+<html lang="pt">
 <head bgcolor="black">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
     <title>PERSONAGENS DA QUEDA DE YCARU</title>
     <link rel="stylesheet" href="index.css">
      <div class="container" >
-        <nav>
+         <nav>
             <ul>
                  <li>
                     <img src="logo.png" width="25" height="25">
@@ -22,13 +22,14 @@
                     <a href="estoria.html">ESTÓRIA</a>
                 </li>
                 <li>
-                    <a href="story.html">STORY BOARD</a>
-                </li>
-                <li>
                     <a href="noticias.html">NOTÍCIAS</a>
                 </li>
                 <li>
+                    <a href="story.html">STORY BOARD</a>
+                </li>
+                <li>
                     <a href="baixar.html"class='cta-button'>BAIXAR</a>
+                
                 </li>
             </ul>
         </nav>
@@ -36,6 +37,10 @@
 </head>
 <body bgcolor="black">
     <center><div class="perso">
+        <img src="ycaru.gif" width="300" height="350">"Lorem ipsum" não é um poema, mas sim um texto de preenchimento usado na indústria gráfica e de design para preencher espaços em layouts onde o texto final ainda não foi definido. Ele é composto por frases em latim, mas sem um significado coerente, servindo apenas como um marcador visual. </img>
+    </div>
+
+<div class="perso">
         <img src="ycaru.gif" width="300" height="350">"Lorem ipsum" não é um poema, mas sim um texto de preenchimento usado na indústria gráfica e de design para preencher espaços em layouts onde o texto final ainda não foi definido. Ele é composto por frases em latim, mas sem um significado coerente, servindo apenas como um marcador visual. </img>
     </div></center>
 
