--- a/Site do jogo/story.html
+++ b/Site do jogo/story.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>STORY BOARD DO YCARU</title>
+    <title>PERSONAGENS DA QUEDA DE YCARU</title>
     <link rel="stylesheet" href="index.css">
      <div class="container" >
-    <nav>
+         <nav>
             <ul>
                  <li>
                     <img src="logo.png" width="25" height="25">
@@ -22,22 +22,25 @@
                     <a href="estoria.html">ESTÓRIA</a>
                 </li>
                 <li>
-                    <a href="story.html">STORY BOARD</a>
-                </li>
-                <li>
                     <a href="noticias.html">NOTÍCIAS</a>
                 </li>
                 <li>
+                    <a href="story.html">STORY BOARD</a>
+                </li>
+                <li>
                     <a href="baixar.html"class='cta-button'>BAIXAR</a>
+                
                 </li>
             </ul>
         </nav>
+    
 </head>
 <body bgcolor="black">
-       <center> <div class="perso">"Lorem ipsum" não é um poema, mas sim um texto de preenchimento usado na indústria gráfica e de design para preencher espaços em layouts onde o texto final ainda não foi definido. Ele é composto por frases em latim, mas sem um significado coerente, servindo apenas como um marcador visual. </div></center>
+    <center><div class="perso">
+        <img src="ycaru.gif" width="300" height="350">"Lorem ipsum" não é um poema, mas sim um texto de preenchimento usado na indústria gráfica e de design para preencher espaços em layouts onde o texto final ainda não foi definido. Ele é composto por frases em latim, mas sem um significado coerente, servindo apenas como um marcador visual. </img>
+    </div></center>
 
-
-        <footer>
+    <footer>
             <a href="https://github.com/ycaruqueda-svg" target="_blank" rel="noopener noreferrer">
                 <img src="./img/github.svg"></img>
                 <p>Github</p>
