--- a/Site do jogo/estoria.html
+++ b/Site do jogo/estoria.html
@@ -7,10 +7,10 @@
     <title>ESTÓRIA DO YCARU</title>
     <link rel="stylesheet" href="index.css">
      <div class="container" >
-    <nav>
+     <nav>
             <ul>
                  <li>
-                    <img src="logo.png" width="25" height="25">
+                    <img src="img/logo.png" width="25" height="25">
                 </li>
                 <li>
                     <a href="index.html">O JOGO</a>
@@ -22,18 +22,26 @@
                     <a href="estoria.html">ESTÓRIA</a>
                 </li>
                 <li>
-                    <a href="story.html">STORY BOARD</a>
-                </li>
-                <li>
                     <a href="noticias.html">NOTÍCIAS</a>
                 </li>
                 <li>
+                    <a href="story.html">STORY BOARD</a>
+                </li>
+                <li>
                     <a href="baixar.html"class='cta-button'>BAIXAR</a>
+                
+                </li>
+                <li>
+                    <a href="story.html" class="prf-txt">
+                        <img src="img/profile.png" class="prf-img">
+                    </a>
                 </li>
             </ul>
         </nav>
 </head>
 <body bgcolor="black">
+    <h1>Estória</h1><br>
+
        <center> <div class="perso">"Lorem ipsum" não é um poema, mas sim um texto de preenchimento usado na indústria gráfica e de design para preencher espaços em layouts onde o texto final ainda não foi definido. Ele é composto por frases em latim, mas sem um significado coerente, servindo apenas como um marcador visual. </div></center>
 
 
