--- a/Site do jogo/noticias.html
+++ b/Site do jogo/noticias.html
@@ -7,10 +7,10 @@
     <title>NOTÍCIAS DO YCARU</title>
     <link rel="stylesheet" href="index.css">
      <div class="container" >
-          <nav>
+           <nav>
             <ul>
                  <li>
-                    <img src="logo.png" width="25" height="25">
+                    <img src="img/logo.png" width="25" height="25">
                 </li>
                 <li>
                     <a href="index.html">O JOGO</a>
@@ -22,32 +22,39 @@
                     <a href="estoria.html">ESTÓRIA</a>
                 </li>
                 <li>
-                    <a href="story.html">STORY BOARD</a>
-                </li>
-                <li>
                     <a href="noticias.html">NOTÍCIAS</a>
                 </li>
                 <li>
+                    <a href="story.html">STORY BOARD</a>
+                </li>
+                <li>
                     <a href="baixar.html"class='cta-button'>BAIXAR</a>
+                
+                </li>
+                <li>
+                    <a href="story.html" class="prf-txt">
+                        <img src="img/profile.png" class="prf-img">
+                    </a>
                 </li>
             </ul>
         </nav>
 </head>
 <body bgcolor="black">
 <br>
-<h1>Notícias:</h1><br><br><br><br>
+<h1>Notícias</h1><br>
+<br><br><br><br><br><br>
 
-    <section1 class="promtotion-section">
+    <section class="promtotion-section">
         <div class="promotion-card">
             "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea comodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </div>
-    </section1>
+    </section>
 
-    <section2 class="promtotion-section">
-        <div class="promotion-card">
+    <section class="promtotion-section1">
+        <div class="promotion-card1">
             "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea comodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </div>
-    </section2>
+    </section>
 
     
 
