--- a/Site do jogo/personagem.html
+++ b/Site do jogo/personagem.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html id="html" lang="pt">
-<head bgcolor="black">
+<html lang="pt">
+<head bgcolor="black" style="position: fixed;">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PERSONAGENS DA QUEDA DE YCARU</title>
     <link rel="stylesheet" href="index.css">
      <div class="container" >
-        <nav>
+         <nav>
             <ul>
                  <li>
-                    <img src="logo.png" width="25" height="25">
+                    <img src="img/logo.png" width="25" height="25">
                 </li>
                 <li>
                     <a href="index.html">O JOGO</a>
@@ -22,21 +22,32 @@
                     <a href="estoria.html">ESTÓRIA</a>
                 </li>
                 <li>
-                    <a href="story.html">STORY BOARD</a>
-                </li>
-                <li>
                     <a href="noticias.html">NOTÍCIAS</a>
                 </li>
                 <li>
+                    <a href="story.html">STORY BOARD</a>
+                </li>
+                <li>
                     <a href="baixar.html"class='cta-button'>BAIXAR</a>
+                
+                </li>
+                <li>
+                    <a href="story.html" class="prf-txt">
+                        <img src="img/profile.png" class="prf-img">
+                    </a>
                 </li>
             </ul>
         </nav>
     
 </head>
 <body bgcolor="black">
+    <h1>Personagens</h1>
     <center><div class="perso">
-        <img src="ycaru.gif" width="300" height="350">"Lorem ipsum" não é um poema, mas sim um texto de preenchimento usado na indústria gráfica e de design para preencher espaços em layouts onde o texto final ainda não foi definido. Ele é composto por frases em latim, mas sem um significado coerente, servindo apenas como um marcador visual. </img>
+        <img src="img/Icar.gif" width="300" height="350">"Lorem ipsum" não é um poema, mas sim um texto de preenchimento usado na indústria gráfica e de design para preencher espaços em layouts onde o texto final ainda não foi definido. Ele é composto por frases em latim, mas sem um significado coerente, servindo apenas como um marcador visual. </img>
+    </div>
+
+<div class="perso">
+        <img src="img/Icar1.gif" width="300" height="350">"Lorem ipsum" não é um poema, mas sim um texto de preenchimento usado na indústria gráfica e de design para preencher espaços em layouts onde o texto final ainda não foi definido. Ele é composto por frases em latim, mas sem um significado coerente, servindo apenas como um marcador visual. </img>
     </div></center>
 
     <footer>
